<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constrained_layout"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_wide" android:layout_marginTop="@dimen/margin_wide"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/box_one_text"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/margin_wide"
            style="@style/WhiteBox"
    />
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_two_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintStart_toStartOf="parent"
            style="@style/WhiteBox"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text" app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            style="@style/WhiteBox"
            android:layout_marginEnd="16dp" app:layout_constraintVertical_chainStyle="spread_inside"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four_text"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            style="@style/WhiteBox"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five_text"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            style="@style/WhiteBox"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            android:textSize="24sp"
            android:fontFamily="@font/roboto"
            app:layout_constraintEnd_toStartOf="@+id/textView6" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/press_buttons_and_views"
            android:layout_width="0dp"
            android:fontFamily="@font/roboto"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_two_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.07999998"/>
    <Button
            android:text="@string/make_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_red" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button_yellow"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_yellow" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/make_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_yellow"
            app:layout_constraintStart_toEndOf="@+id/button_red" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button_green" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/make_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_green"
            app:layout_constraintStart_toEndOf="@+id/button_yellow" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/button_yellow"
            android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>